--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      FOREIGN_REPO: gliech/dotfiles
+      FOREIGN_REPO: ${{ secrets.FOREIGN_REPO }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -169,8 +169,8 @@ jobs:
         id: self
         uses: ./
         with:
-          location: deinopon
-          org_visibility: ''
+          location: ${{ secrets.FOREIGN_ORGANIZATION }}
+          org_visibility: ""
           name: CREATE_GITHUB_SECRET_ACTION_TEST
           value: ${{ github.sha }}
           pa_token: ${{ secrets.PA_TOKEN_ORG_ADMIN }}
