--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,7 +181,7 @@ jobs:
           ${{steps.self.outputs.status}}"; exit 1
 
   test_scoped_organization:
-    name: test organization secret
+    name: test scoped organization secret
     runs-on: ubuntu-latest
     needs: build
     steps:
