--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,7 +170,7 @@ jobs:
         uses: ./
         with:
           location: ${{ secrets.FOREIGN_ORGANIZATION }}
-          org_visibility: ""
+          org_visibility: "all"
           name: CREATE_GITHUB_SECRET_ACTION_TEST
           value: ${{ github.sha }}
           pa_token: ${{ secrets.PA_TOKEN_ORG_ADMIN }}
@@ -199,7 +199,7 @@ jobs:
         uses: ./
         with:
           location: ${{ secrets.FOREIGN_ORGANIZATION }}
-          org_visibility: $$ {{ secrets.SCOPED_REPO_ID }}
+          org_visibility: ${{ secrets.SCOPED_REPO_ID }}
           name: CREATE_GITHUB_SECRET_ACTION_TEST
           value: ${{ github.sha }}
           pa_token: ${{ secrets.PA_TOKEN_ORG_ADMIN }}
