--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      FOREIGN_REPO: gliech/dotfiles
+      FOREIGN_REPO: ${{ secrets.FOREIGN_REPO }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -169,9 +169,38 @@ jobs:
         id: self
         uses: ./
         with:
-          location: deinopon
-          org_visibility: ''
+          location: ${{ secrets.FOREIGN_ORGANIZATION }}
+          org_visibility: "all"
           name: CREATE_GITHUB_SECRET_ACTION_TEST
+          value: ${{ github.sha }}
+          pa_token: ${{ secrets.PA_TOKEN_ORG_ADMIN }}
+
+      - name: Assert action output
+        if: steps.self.outputs.status != '204'
+        run: echo "::error::Expected HTTP status code 204 got
+          ${{steps.self.outputs.status}}"; exit 1
+
+  test_scoped_organization:
+    name: test scoped organization secret
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: main
+          path: dist
+
+      - name: Update a scoped secret
+        id: self
+        uses: ./
+        with:
+          location: ${{ secrets.FOREIGN_ORGANIZATION }}
+          org_visibility: ${{ secrets.SCOPED_REPO_ID }}
+          name: CREATE_GITHUB_SECRET_ACTION_SCOPED_TEST
           value: ${{ github.sha }}
           pa_token: ${{ secrets.PA_TOKEN_ORG_ADMIN }}
 
@@ -190,6 +219,7 @@ jobs:
       - test_repo_location
       - test_update
       - test_organization
+      - test_scoped_organization
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
